@@ -493,6 +493,9 @@ Release 2.1.0-beta - 2013-07-02
     MAPREDUCE-5187. Create mapreduce command scripts on Windows. (Chuan Liu via
     cnauroth)
 
+    MAPREDUCE-4374. Fix child task environment variable config and add support
+    for Windows. (Chuan Liu via cnauroth)
+
     MAPREDUCE-5291. Change MR App to use updated property names in
     container-log4j.properties. (Zhijie Shen via sseth)
 
